--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -55,3 +55,15 @@ async-trait = "0.1"
 
 # Once cell for lazy initialization
 once_cell = "1"
+
+# HTTP Client for Email API
+reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
+
+# SMTP Email - UNCOMMENT AFTER WINDOWS RESTART
+lettre = { version = "0.11", default-features = false, features = ["tokio1", "tokio1-rustls-tls", "smtp-transport", "builder"] }
+
+[profile.dev]
+incremental = false
+split-debuginfo = "off"
+debug = false
+strip = "symbols"
