--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -64,6 +64,7 @@ lettre = { version = "0.11", default-features = false, features = ["tokio1", "to
 axum = "0.8.8"
 tower = "0.5.2"
 tower-http = { version = "0.6.8", features = ["cors", "fs", "trace"] }
+dotenvy = "0.15.7"
 
 [profile.dev]
 incremental = false
