Add PostgreSQL support, update Axum to 0.8, and expand HTTP API

--- a/src-tauri/.env.example
+++ b/src-tauri/.env.example
@@ -2,4 +2,16 @@
 PORT=3000
 
 # CORS Configuration (Comma separated)
-CORS_ALLOWED_ORIGINS=http://localhost:5173,http://localhost:3000,tauri://localhost,https://tauri.localhost
+CORS_ALLOWED_ORIGINS=http://localhost:5173,http://localhost:3000,http://localhost:1420,tauri://localhost,https://tauri.localhost
+
+# Database Configuration
+# For PostgreSQL (production/online mode):
+# DATABASE_URL=postgres://user:password@host:5432/database_name
+
+# For SQLite (local development, default if not set):
+# DATABASE_URL=sqlite:./saas_app.db?mode=rwc
+
+# Examples for popular PostgreSQL providers:
+# Supabase: DATABASE_URL=postgres://postgres:[PASSWORD]@db.[PROJECT].supabase.co:5432/postgres
+# Neon: DATABASE_URL=postgres://[USER]:[PASSWORD]@[ENDPOINT].neon.tech/neondb?sslmode=require
+# Railway: DATABASE_URL=postgres://postgres:[PASSWORD]@[HOST].railway.app:5432/railway
