--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -12,6 +12,11 @@ crate-type = ["staticlib", "cdylib", "rlib"]
 [build-dependencies]
 tauri-build = { version = "2", features = [] }
 
+[features]
+default = ["postgres"]
+postgres = []  # PostgreSQL mode (default)
+sqlite = []    # SQLite mode: cargo build --features sqlite --no-default-features
+
 [dependencies]
 # Tauri
 tauri = { version = "2", features = ["image-png", "image-ico"] }
@@ -24,8 +29,8 @@ serde_json = "1"
 # Async Runtime
 tokio = { version = "1", features = ["full"] }
 
-# Database (SQLite)
-sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "uuid", "chrono"] }
+# Database (SQLite default, PostgreSQL optional)
+sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "postgres", "uuid", "chrono"] }
 
 # Authentication
 jsonwebtoken = "9"
@@ -59,12 +64,16 @@ once_cell = "1"
 # HTTP Client for Email API
 reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
 
-# SMTP Email - UNCOMMENT AFTER WINDOWS RESTART
+# SMTP Email
 lettre = { version = "0.11", default-features = false, features = ["tokio1", "tokio1-rustls-tls", "smtp-transport", "builder"] }
-axum = "0.8.8"
-tower = "0.5.2"
-tower-http = { version = "0.6.8", features = ["cors", "fs", "trace"] }
-dotenvy = "0.15.7"
+
+# HTTP Server
+axum = "0.8"
+tower = "0.5"
+tower-http = { version = "0.6", features = ["cors", "fs", "trace"] }
+
+# Environment
+dotenvy = "0.15"
 
 [profile.dev]
 incremental = false
