--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -68,9 +68,12 @@ reqwest = { version = "0.12", default-features = false, features = ["json", "rus
 lettre = { version = "0.11", default-features = false, features = ["tokio1", "tokio1-rustls-tls", "smtp-transport", "builder"] }
 
 # HTTP Server
-axum = "0.8"
+axum = { version = "0.8", features = ["ws"] }
 tower = "0.5"
 tower-http = { version = "0.6", features = ["cors", "fs", "trace"] }
+
+# WebSocket / Futures
+futures = "0.3"
 
 # Environment
 dotenvy = "0.15"
