--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -19,7 +19,7 @@ sqlite = []    # SQLite mode: cargo build --features sqlite --no-default-feature
 
 [dependencies]
 # Tauri
-tauri = { version = "2", features = ["image-png", "image-ico"] }
+tauri = { version = "2", features = ["image-png", "image-ico", "devtools"] }
 tauri-plugin-opener = "2"
 
 # Serialization
@@ -77,6 +77,7 @@ futures = "0.3"
 
 # Environment
 dotenvy = "0.15"
+tauri-plugin-single-instance = "2.0.1"
 
 [profile.dev]
 incremental = false
