feat: enhance storage manager with streaming upload, lightbox, and tenant isolation
- Refactored Storage Manager into a reusable FileManager component.
- Implemented Lightbox for file previews with double-click interaction.
- Added persistent global upload progress UI (GlobalUploads).
- Upgraded backend to support streaming uploads (multipart) with 1GB limit and 1h timeout.
- Implemented structured file storage (	enant/year/month).
- Added Superadmin Settings for max file size and allowed extensions.
- Secured file listing and deletion with tenant isolation.
- Fixed sset:// protocol access permissions in Tauri v2.
- Cleaned up unused components and dependencies.

--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "@tauri-apps/api": "^2",
     "@tauri-apps/plugin-opener": "^2",
     "lucide-svelte": "^0.562.0",
-    "svelte-i18n": "^4.0.1"
+    "svelte-i18n": "^4.0.1",
+    "svelte-sonner": "^1.0.7"
   },
   "devDependencies": {
     "@sveltejs/adapter-static": "^3.0.6",
