--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -5,6 +5,9 @@ description = "A SaaS Boilerplate with Rust + Tauri"
 authors = ["Developer"]
 edition = "2021"
 
+[lints.rust]
+dependency_on_unit_never_type_fallback = "allow"
+
 [lib]
 name = "saas_tauri_lib"
 crate-type = ["staticlib", "cdylib", "rlib"]
@@ -68,9 +71,9 @@ reqwest = { version = "0.12", default-features = false, features = ["json", "rus
 lettre = { version = "0.11", default-features = false, features = ["tokio1", "tokio1-rustls-tls", "smtp-transport", "builder"] }
 
 # HTTP Server
-axum = { version = "0.8", features = ["ws"] }
+axum = { version = "0.8", features = ["multipart", "ws"] }
 tower = "0.5"
-tower-http = { version = "0.6", features = ["cors", "fs", "trace"] }
+tower-http = { version = "0.6", features = ["cors", "fs", "timeout", "trace"] }
 
 # WebSocket / Futures
 futures = "0.3"
@@ -79,6 +82,8 @@ futures = "0.3"
 dotenvy = "0.15"
 tauri-plugin-single-instance = "2.0.1"
 sysinfo = "0.30"
+tauri-plugin-fs = "2.4.5"
+tokio-util = { version = "0.7.18", features = ["io", "compat"] }
 
 [profile.dev]
 incremental = false
