feat: enhance storage manager with multi-select, thumbnails, filtering, and native download
- Full migration of storage manager and admin pages to Svelte 5 Runes.
- Added Grid/List thumbnails and category filtering.
- Implemented multi-select and batch deletion with permission checks.
- Added native file download support for Tauri using system dialogs.
- Expanded backend storage API with force-download endpoint.
- Standardized confirmation dialogs across admin and storage pages.
- Configured Tauri capabilities for filesystem and dialog plugins.

--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -84,6 +84,7 @@ tauri-plugin-single-instance = "2.0.1"
 sysinfo = "0.30"
 tauri-plugin-fs = "2.4.5"
 tokio-util = { version = "0.7.18", features = ["io", "compat"] }
+tauri-plugin-dialog = "2.6.0"
 
 [profile.dev]
 incremental = false
