--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -85,6 +85,8 @@ sysinfo = "0.30"
 tauri-plugin-fs = "2.4.5"
 tokio-util = { version = "0.7.18", features = ["io", "compat"] }
 tauri-plugin-dialog = "2.6.0"
+aws-config = "1.8.12"
+aws-sdk-s3 = "1.120.0"
 
 [profile.dev]
 incremental = false
