--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -47,6 +47,9 @@ uuid = { version = "1", features = ["v4", "serde"] }
 # Date/Time
 chrono = { version = "0.4", features = ["serde"] }
 
+# Hashing
+sha2 = "0.10"
+
 # Error Handling
 thiserror = "2"
 anyhow = "1"
