feat: implement payment notifications and fix subscription logic
- integrated NotificationService into PaymentService
- added system notifications for Tenant Members (success/failure)
- added alerts for Superadmins on new sales
- fixed get_public_settings to expose Midtrans config (enabling online payment UI)
- fixed activate_subscription logic to use explicit UPDATE/INSERT for reliability
- fixed compilation and syntax errors in backend

--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -90,6 +90,9 @@ tokio-util = { version = "0.7.18", features = ["io", "compat"] }
 tauri-plugin-dialog = "2.6.0"
 aws-config = "1.8.12"
 aws-sdk-s3 = "1.120.0"
+web-push-native = "0.4.0"
+base64ct = { version = "1.8.3", features = ["alloc"] }
+tauri-plugin-notification = "2.3.3"
 
 [profile.dev]
 incremental = false
