--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "@tauri-apps/api": "^2",
     "@tauri-apps/plugin-dialog": "^2.6.0",
     "@tauri-apps/plugin-fs": "^2.4.5",
+    "@tauri-apps/plugin-notification": "^2.3.3",
     "@tauri-apps/plugin-opener": "^2",
+    "@zerodevx/svelte-toast": "^0.9.6",
     "lucide-svelte": "^0.562.0",
     "svelte-i18n": "^4.0.1",
     "svelte-sonner": "^1.0.7"
