feat: implement comprehensive backup system and enhance payment/UI security
- Backend: Added BackupService with scheduled backups and ZIP compression support.
- Backend: Enhanced Midtrans payment status handling and notification validation.
- Backend: Seeded new 'backups' permissions and added backup HTTP/Tauri routes.
- Frontend: Implemented Backups UI for Superadmin and Tenant Admin.
- Frontend: Improved payment checkout with auto-polling and robust script loading.
- Frontend: Added 'Select All' for roles and refined Sidebar navigation.
- Security: Updated CSP for Midtrans and fixed missing 2FA verification call.
- Misc: Fixed i18n locale normalization and cleaned up temporary check files.

--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -34,7 +34,7 @@ serde_json = "1"
 tokio = { version = "1", features = ["full"] }
 
 # Database (SQLite default, PostgreSQL optional)
-sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "postgres", "uuid", "chrono"] }
+sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "postgres", "uuid", "chrono", "bigdecimal"] }
 
 # Authentication
 jsonwebtoken = "9"
@@ -44,6 +44,9 @@ base64 = "0.21"
 
 # UUID
 uuid = { version = "1", features = ["v4", "serde"] }
+
+# ZIP Compression
+zip = "0.6"
 
 # Date/Time
 chrono = { version = "0.4", features = ["serde"] }
