--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -34,7 +34,7 @@ serde_json = "1"
 tokio = { version = "1", features = ["full"] }
 
 # Database (SQLite default, PostgreSQL optional)
-sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "postgres", "uuid", "chrono", "bigdecimal"] }
+sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "postgres", "uuid", "chrono", "bigdecimal", "migrate"] }
 
 # Authentication
 jsonwebtoken = "9"
