--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
     "format": "prettier . --write",
     "format:check": "prettier . --check",
     "format:rust": "cargo fmt --manifest-path src-tauri/Cargo.toml --all",
+    "db:migrate": "cargo run --manifest-path src-tauri/Cargo.toml --bin migrate",
+    "db:seed": "cargo run --manifest-path src-tauri/Cargo.toml --bin seed -- prod",
+    "db:seed:dev": "cargo run --manifest-path src-tauri/Cargo.toml --bin seed -- dev",
     "tauri": "tauri"
   },
   "license": "MIT",
