--- a/package.json
+++ b/package.json
@@ -30,6 +30,11 @@
     "@tauri-apps/plugin-fs": "^2.4.5",
     "@tauri-apps/plugin-notification": "^2.3.3",
     "@tauri-apps/plugin-opener": "^2",
+    "@tiptap/core": "^2.26.1",
+    "@tiptap/extension-link": "^2.26.1",
+    "@tiptap/extension-placeholder": "^2.26.1",
+    "@tiptap/extension-underline": "^2.26.1",
+    "@tiptap/starter-kit": "^2.26.1",
     "@zerodevx/svelte-toast": "^0.9.6",
     "docx-preview": "^0.3.7",
     "lucide-svelte": "^0.562.0",
