--- a/.env.example
+++ b/.env.example
@@ -11,9 +11,11 @@ POSTGRES_USER=saas_user
 POSTGRES_PASSWORD=saas_password
 POSTGRES_DB=saas_db
 POSTGRES_PORT=5433
+POSTGRES_HOST=localhost
+POSTGRES_SSLMODE=disable
 
-# Database URL (PostgreSQL - default)
-DATABASE_URL=postgres://saas_user:saas_password@localhost:5433/saas_db
+# Optional override (if you need special characters in credentials):
+# DATABASE_URL=postgres://user:password@host:5432/dbname
 
 # =================================
 # External PostgreSQL Examples
