--- a/.env.example
+++ b/.env.example
@@ -7,10 +7,10 @@ CORS_ALLOWED_ORIGINS=http://localhost:5173,http://localhost:3000,http://localhos
 # =================================
 # PostgreSQL Docker Configuration
 # =================================
-POSTGRES_USER=saas_user
-POSTGRES_PASSWORD=saas_password
-POSTGRES_DB=saas_db
-POSTGRES_PORT=5433
+POSTGRES_USER=isp_user
+POSTGRES_PASSWORD=isp_password
+POSTGRES_DB=isp_db
+POSTGRES_PORT=5439
 POSTGRES_HOST=localhost
 POSTGRES_SSLMODE=disable
 
