--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,21 +1,21 @@
 services:
   postgres:
     image: postgres:16-alpine
-    container_name: saas_postgres
+    container_name: isp_postgres
     restart: unless-stopped
     environment:
-      POSTGRES_USER: ${POSTGRES_USER:-saas_user}
-      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD:-saas_password}
-      POSTGRES_DB: ${POSTGRES_DB:-saas_db}
+      POSTGRES_USER: ${POSTGRES_USER:-isp_user}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD:-isp_password}
+      POSTGRES_DB: ${POSTGRES_DB:-isp_db}
     ports:
-      - '${POSTGRES_PORT:-5433}:5432'
+      - '${POSTGRES_PORT:-5439}:5432'
     volumes:
-      - postgres_data:/var/lib/postgresql/data
+      - isp_postgres_data:/var/lib/postgresql/data
     healthcheck:
-      test: ['CMD-SHELL', 'pg_isready -U ${POSTGRES_USER:-saas_user} -d ${POSTGRES_DB:-saas_db}']
+      test: ['CMD-SHELL', 'pg_isready -U ${POSTGRES_USER:-isp_user} -d ${POSTGRES_DB:-isp_db}']
       interval: 10s
       timeout: 5s
       retries: 5
 
 volumes:
-  postgres_data:
+  isp_postgres_data:
