--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -99,6 +99,7 @@ web-push-native = "0.4.0"
 base64ct = { version = "1.8.3", features = ["alloc"] }
 tauri-plugin-notification = "2.3.3"
 totp-rs = { version = "5.7.0", features = ["qr", "gen_secret"] }
+mikrotik-rs = "0.5.1"
 
 [profile.dev]
 incremental = false
