security(audit): encrypt mikrotik credentials + audit logs

--- a/.env.example
+++ b/.env.example
@@ -18,6 +18,13 @@ POSTGRES_SSLMODE=disable
 # DATABASE_URL=postgres://user:password@host:5432/dbname
 
 # =================================
+# MikroTik Credentials Encryption
+# =================================
+# Used to encrypt/decrypt router passwords at rest in the DB.
+# Change this in production and keep it secret.
+MIKROTIK_CRED_KEY=change-me-to-a-long-random-secret
+
+# =================================
 # External PostgreSQL Examples
 # =================================
 # Supabase: DATABASE_URL=postgres://postgres:[PASSWORD]@db.[PROJECT].supabase.co:5432/postgres
