security: use APP_SECRET master key (derive mikrotik cred key)

--- a/.env.example
+++ b/.env.example
@@ -18,11 +18,14 @@ POSTGRES_SSLMODE=disable
 # DATABASE_URL=postgres://user:password@host:5432/dbname
 
 # =================================
-# MikroTik Credentials Encryption
+# App Secret (Master Key)
 # =================================
-# Used to encrypt/decrypt router passwords at rest in the DB.
-# Change this in production and keep it secret.
-MIKROTIK_CRED_KEY=change-me-to-a-long-random-secret
+# Used to derive encryption keys (and can be used for other signing/encryption needs later).
+# IMPORTANT: Do NOT change after you have data encrypted in the DB, unless you rotate keys properly.
+APP_SECRET=change-me-to-a-long-random-secret
+
+# Legacy (deprecated): kept for backward compatibility.
+# MIKROTIK_CRED_KEY=change-me-to-a-long-random-secret
 
 # =================================
 # External PostgreSQL Examples
