feat: update CORS settings, enhance server build/run scripts, and improve environment configurations

--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "db:migrate": "cargo run --manifest-path src-tauri/Cargo.toml --bin migrate",
     "db:seed": "cargo run --manifest-path src-tauri/Cargo.toml --bin seed -- prod",
     "db:seed:dev": "cargo run --manifest-path src-tauri/Cargo.toml --bin seed -- dev",
-    "tauri": "tauri"
+    "tauri": "tauri",
+    "server:build": "cargo build --manifest-path src-tauri/Cargo.toml --release --no-default-features --features postgres --bin server",
+    "server:run": "cargo run --manifest-path src-tauri/Cargo.toml --release --no-default-features --features postgres --bin server"
   },
   "license": "MIT",
   "dependencies": {
