--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -14,17 +14,30 @@ name = "saas_tauri_lib"
 crate-type = ["staticlib", "cdylib", "rlib"]
 
 [build-dependencies]
-tauri-build = { version = "2", features = [] }
+tauri-build = { version = "2", features = [], optional = true }
 
 [features]
-default = ["postgres"]
+default = ["postgres", "desktop"]
 postgres = []  # PostgreSQL mode (default)
 sqlite = []    # SQLite mode: cargo build --features sqlite --no-default-features
+desktop = [
+    "dep:tauri",
+    "dep:tauri-plugin-opener",
+    "dep:tauri-plugin-single-instance",
+    "dep:tauri-plugin-fs",
+    "dep:tauri-plugin-dialog",
+    "dep:tauri-plugin-notification",
+    "dep:tauri-build",
+]
 
 [dependencies]
 # Tauri
-tauri = { version = "2", features = ["image-png", "image-ico", "devtools"] }
-tauri-plugin-opener = "2"
+tauri = { version = "2", features = ["image-png", "image-ico", "devtools"], optional = true }
+tauri-plugin-opener = { version = "2", optional = true }
+tauri-plugin-single-instance = { version = "2.0.1", optional = true }
+tauri-plugin-fs = { version = "2.4.5", optional = true }
+tauri-plugin-dialog = { version = "2.6.0", optional = true }
+tauri-plugin-notification = { version = "2.3.3", optional = true }
 
 # Serialization
 serde = { version = "1", features = ["derive"] }
@@ -88,16 +101,12 @@ futures = "0.3"
 
 # Environment
 dotenvy = "0.15"
-tauri-plugin-single-instance = "2.0.1"
 sysinfo = "0.30"
-tauri-plugin-fs = "2.4.5"
 tokio-util = { version = "0.7.18", features = ["io", "compat"] }
-tauri-plugin-dialog = "2.6.0"
 aws-config = "1.8.12"
 aws-sdk-s3 = "1.120.0"
 web-push-native = "0.4.0"
 base64ct = { version = "1.8.3", features = ["alloc"] }
-tauri-plugin-notification = "2.3.3"
 totp-rs = { version = "5.7.0", features = ["qr", "gen_secret"] }
 mikrotik-rs = "0.5.1"
 aes-gcm = "0.10"
