Add reroute integration tests for platform and custom domain routing

--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "postinstall": "node scripts/copy-pdfjs-assets.mjs",
     "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
     "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
+    "test:unit": "vitest run",
+    "test:unit:watch": "vitest",
     "lint": "eslint .",
     "lint:rust": "cargo clippy --manifest-path src-tauri/Cargo.toml --all-targets",
     "lint:rust:sqlite": "cargo clippy --manifest-path src-tauri/Cargo.toml --no-default-features --features sqlite --all-targets",
@@ -64,6 +66,7 @@
     "svelte-check": "^4.0.0",
     "svelte-eslint-parser": "^0.39.0",
     "typescript": "~5.6.2",
-    "vite": "^6.0.3"
+    "vite": "^6.0.3",
+    "vitest": "^4.0.18"
   }
 }
