--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
     "test:unit": "vitest run",
     "test:unit:watch": "vitest",
+    "i18n:check": "node scripts/check-i18n.mjs",
+    "i18n:check:json": "node scripts/check-i18n.mjs --json",
     "lint": "eslint .",
     "lint:rust": "cargo clippy --manifest-path src-tauri/Cargo.toml --all-targets",
     "lint:rust:sqlite": "cargo clippy --manifest-path src-tauri/Cargo.toml --no-default-features --features sqlite --all-targets",
