--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@zerodevx/svelte-toast": "^0.9.6",
     "docx-preview": "^0.3.7",
     "lucide-svelte": "^0.562.0",
+    "maplibre-gl": "^4.7.1",
     "pdfjs-dist": "^5.4.624",
     "svelte-i18n": "^4.0.1",
     "svelte-sonner": "^1.0.7",
